--- a/docs/_static/local.css
+++ b/docs/_static/local.css
@@ -2,3 +2,4 @@ table.docutils{margin:1rem}
 table.docutils td, table.docutils th{padding:0.5rem}
 body{font-size:1.15rem}
 pre{font-size:1.25rem}
+span.pre{font-size:1.25rem}
